@@ -4103,13 +4103,17 @@ public class ConnectionRegressionTest extends BaseTestCase {
             boolean gplWithRSA = allowsRsa(this.stmt);
 
             try {
-                this.stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser("'wl5602user'@'%'", "identified WITH sha256_password");
                 this.stmt.executeUpdate("grant all on *.* to 'wl5602user'@'%'");
                 createUser("'wl5602nopassword'@'%'", "identified WITH sha256_password");
                 this.stmt.executeUpdate("grant all on *.* to 'wl5602nopassword'@'%'");
-                this.stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.stmt.executeUpdate(versionMeetsMinimum(5, 7, 6) ? "ALTER USER 'wl5602user'@'%' IDENTIFIED BY 'pwd'"
                         : "set password for 'wl5602user'@'%' = PASSWORD('pwd')");
                 this.stmt.executeUpdate("flush privileges");
@@ -4210,7 +4214,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
 
             } finally {
                 this.stmt.executeUpdate("flush privileges");
-                this.stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
         }
 
@@ -4228,13 +4234,17 @@ public class ConnectionRegressionTest extends BaseTestCase {
 
             try {
                 // create user with long password and sha256_password auth
-                this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser(this.sha256Stmt, "'wl5602user'@'%'", "identified WITH sha256_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'wl5602user'@'%'");
                 createUser(this.sha256Stmt, "'wl5602nopassword'@'%'", "identified WITH sha256_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'wl5602nopassword'@'%'");
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.sha256Stmt.executeUpdate(((MySQLConnection) this.sha256Conn).versionMeetsMinimum(5, 7, 6)
                         ? "ALTER USER 'wl5602user'@'%' IDENTIFIED BY 'pwd'" : "set password for 'wl5602user'@'%' = PASSWORD('pwd')");
                 this.sha256Stmt.executeUpdate("flush privileges");
@@ -4522,7 +4532,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 });
 
             } finally {
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
 
         }
@@ -4931,12 +4943,13 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 createUser("'must_change1'@'%'", "IDENTIFIED BY 'aha'");
                 this.stmt.executeUpdate("grant all on `" + dbname + "`.* to 'must_change1'@'%'");
                 createUser("'must_change2'@'%'", "IDENTIFIED BY 'aha'");
-                this.stmt.executeUpdate("grant all on `" + dbname + "`.* to 'must_change2'@'%' IDENTIFIED BY 'aha'");
+                this.stmt.executeUpdate("grant all on `" + dbname + "`.* to 'must_change2'@'%'");
 
                 // TODO workaround for Bug#77732, should be fixed in 5.7.9
-                if (versionMeetsMinimum(5, 7, 6)) {
-                    this.stmt.executeUpdate("GRANT SELECT ON `performance_schema`.`session_variables` TO 'must_change1'@'%' IDENTIFIED BY 'aha'");
-                    this.stmt.executeUpdate("GRANT SELECT ON `performance_schema`.`session_variables` TO 'must_change2'@'%' IDENTIFIED BY 'aha'");
+                if (versionMeetsMinimum(5, 7, 6) && !versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("GRANT SELECT ON `performance_schema`.`session_variables` TO 'must_change1'@'%'");
+                    this.stmt.executeUpdate("GRANT SELECT ON `performance_schema`.`session_variables` TO 'must_change2'@'%'");
+
                 }
 
                 this.stmt.executeUpdate(versionMeetsMinimum(5, 7, 6) ? "ALTER USER 'must_change1'@'%', 'must_change2'@'%' PASSWORD EXPIRE"
@@ -5935,11 +5948,15 @@ public class ConnectionRegressionTest extends BaseTestCase {
                                                 + "aaaaaaaaaabbbbbbbbbbccccccccccddddddddddeeeeeeeeeeaaaaaaaaaabbbbbbbbbbccccccccccddddddddddeeeeeeeeee"
                                                 + "aaaaaaaaaabbbbbbbbbbccccccccccddddddddddeeeeeeeeeeaaaaaaaaaabbbbbbbbbbccccccccccddddddddddeeeeeeeeee";
 
-                this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser(this.sha256Stmt, "'wl6134user'@'%'", "identified WITH sha256_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'wl6134user'@'%'");
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.sha256Stmt.executeUpdate(((MySQLConnection) this.sha256Conn).versionMeetsMinimum(5, 7, 6)
                         ? "ALTER USER 'wl6134user'@'%' IDENTIFIED BY '" + pwd + "'" : "set password for 'wl6134user'@'%' = PASSWORD('" + pwd + "')");
                 this.sha256Stmt.executeUpdate("flush privileges");
@@ -5979,7 +5996,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
                     }
                 }
             } finally {
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
         }
     }
@@ -6522,7 +6541,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
             }
 
             try {
-                this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser(this.sha256Stmt, "'bug18869381user1'@'%'", "identified WITH sha256_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'bug18869381user1'@'%'");
                 createUser(this.sha256Stmt, "'bug18869381user2'@'%'", "identified WITH sha256_password");
@@ -6531,8 +6552,10 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'bug18869381user3'@'%'");
                 this.sha256Stmt.executeUpdate(((MySQLConnection) this.sha256Conn).versionMeetsMinimum(5, 7, 6)
                         ? "ALTER USER 'bug18869381user3'@'%' IDENTIFIED BY 'pwd3'" : "set password for 'bug18869381user3'@'%' = PASSWORD('pwd3')");
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.sha256Stmt.executeUpdate(((MySQLConnection) this.sha256Conn).versionMeetsMinimum(5, 7, 6)
                         ? "ALTER USER 'bug18869381user1'@'%' IDENTIFIED BY 'LongLongLongLongLongLongLongLongLongLongLongLongPwd1'"
                         : "set password for 'bug18869381user1'@'%' = PASSWORD('LongLongLongLongLongLongLongLongLongLongLongLongPwd1')");
@@ -6573,7 +6596,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 testBug18869381WithProperties(props);
 
             } finally {
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
         }
     }
@@ -7775,9 +7800,13 @@ public class ConnectionRegressionTest extends BaseTestCase {
             } else if (pwdHashingMethod >= 0) {
                 // for mysql_native_password, mysql_old_password and sha256_password plugins
                 testStmt.execute("CREATE USER '" + user + "'@'%' IDENTIFIED WITH " + pluginName);
-                testStmt.execute("SET @@session.old_passwords = " + pwdHashingMethod);
+                if (!((MySQLConnection) testConn).versionMeetsMinimum(8, 0, 5)) {
+                    testStmt.execute("SET @@session.old_passwords = " + pwdHashingMethod);
+                }
                 testStmt.execute("SET PASSWORD FOR '" + user + "'@'%' = PASSWORD('" + password + "')");
-                testStmt.execute("SET @@session.old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) testConn).versionMeetsMinimum(8, 0, 5)) {
+                    testStmt.execute("SET @@session.old_passwords = @@global.old_passwords");
+                }
             } else {
                 // for cleartext_plugin_server plugin
                 testStmt.execute("CREATE USER '" + user + "'@'%' IDENTIFIED WITH " + pluginName + " AS '" + password + "'");
@@ -7807,9 +7836,13 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 testStmt.execute("ALTER USER '" + user + "'@'%' IDENTIFIED BY '" + password + "'");
             } else if (pwdHashingMethod >= 0) {
                 // for mysql_native_password, mysql_old_password and sha256_password plugins
-                testStmt.execute("SET @@session.old_passwords = " + pwdHashingMethod);
+                if (!((MySQLConnection) testConn).versionMeetsMinimum(8, 0, 5)) {
+                    testStmt.execute("SET @@session.old_passwords = " + pwdHashingMethod);
+                }
                 testStmt.execute("SET PASSWORD FOR '" + user + "'@'%' = PASSWORD('" + password + "')");
-                testStmt.execute("SET @@session.old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) testConn).versionMeetsMinimum(8, 0, 5)) {
+                    testStmt.execute("SET @@session.old_passwords = @@global.old_passwords");
+                }
             } else {
                 // for cleartext_plugin_server plugin
                 dropUser(testStmt, "'" + user + "'@'%'");
@@ -7964,7 +7997,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
             }
 
             try {
-                this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
 
                 createUser(this.sha256Stmt, "'bug75670user'@'%'", ""); // let --default-authentication-plugin option force sha256_password
                 this.rs = this.sha256Stmt.executeQuery("SELECT plugin FROM mysql.user WHERE user='bug75670user'");
@@ -7975,10 +8010,14 @@ public class ConnectionRegressionTest extends BaseTestCase {
                     createUser(this.sha256Stmt, "'bug75670user_mnp'@'%'", "IDENTIFIED WITH mysql_native_password BY 'bug75670user_mnp'");
                     createUser(this.sha256Stmt, "'bug75670user_sha'@'%'", "IDENTIFIED WITH sha256_password BY 'bug75670user_sha'");
                 } else {
-                    this.sha256Stmt.execute("SET @@session.old_passwords = 0");
+                    if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                        this.sha256Stmt.execute("SET @@session.old_passwords = 0");
+                    }
                     createUser(this.sha256Stmt, "'bug75670user_mnp'@'%'", "IDENTIFIED WITH mysql_native_password");
                     this.sha256Stmt.execute("SET PASSWORD FOR 'bug75670user_mnp'@'%' = PASSWORD('bug75670user_mnp')");
-                    this.sha256Stmt.execute("SET @@session.old_passwords = 2");
+                    if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                        this.sha256Stmt.execute("SET @@session.old_passwords = 2");
+                    }
                     createUser(this.sha256Stmt, "'bug75670user_sha'@'%'", "IDENTIFIED WITH sha256_password");
                     this.sha256Stmt.execute("SET PASSWORD FOR 'bug75670user_sha'@'%' = PASSWORD('bug75670user_sha')");
                 }
@@ -8086,7 +8125,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
                     }
                 }
             } finally {
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
         }
     }
@@ -10256,13 +10297,17 @@ public class ConnectionRegressionTest extends BaseTestCase {
             boolean gplWithRSA = allowsRsa(this.stmt);
 
             try {
-                this.stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser("'wl11200user'@'%'", "identified WITH caching_sha2_password");
                 this.stmt.executeUpdate("grant all on *.* to 'wl11200user'@'%'");
                 createUser("'wl11200nopassword'@'%'", "identified WITH caching_sha2_password");
                 this.stmt.executeUpdate("grant all on *.* to 'wl11200nopassword'@'%'");
-                this.stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.stmt.executeUpdate(versionMeetsMinimum(5, 7, 6) ? "ALTER USER 'wl11200user'@'%' IDENTIFIED BY 'pwd'"
                         : "set password for 'wl11200user'@'%' = PASSWORD('pwd')");
                 this.stmt.executeUpdate("flush privileges");
@@ -10382,7 +10427,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
 
             } finally {
                 this.stmt.executeUpdate("flush privileges");
-                this.stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!versionMeetsMinimum(8, 0, 5)) {
+                    this.stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
         }
 
@@ -10400,13 +10447,17 @@ public class ConnectionRegressionTest extends BaseTestCase {
 
             try {
                 // create user with long password and caching_sha2_password auth
-                this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET @current_old_passwords = @@global.old_passwords");
+                }
                 createUser(this.sha256Stmt, "'wl11200user'@'%'", "identified WITH caching_sha2_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'wl11200user'@'%'");
                 createUser(this.sha256Stmt, "'wl11200nopassword'@'%'", "identified WITH caching_sha2_password");
                 this.sha256Stmt.executeUpdate("grant all on *.* to 'wl11200nopassword'@'%'");
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
-                this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords= 2");
+                    this.sha256Stmt.executeUpdate("SET SESSION old_passwords= 2");
+                }
                 this.sha256Stmt.executeUpdate(((MySQLConnection) this.sha256Conn).versionMeetsMinimum(5, 7, 6)
                         ? "ALTER USER 'wl11200user'@'%' IDENTIFIED BY 'pwd'" : "set password for 'wl11200user'@'%' = PASSWORD('pwd')");
                 this.sha256Stmt.executeUpdate("flush privileges");
@@ -10714,7 +10765,9 @@ public class ConnectionRegressionTest extends BaseTestCase {
                 });
 
             } finally {
-                this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                if (!((MySQLConnection) this.sha256Conn).versionMeetsMinimum(8, 0, 5)) {
+                    this.sha256Stmt.executeUpdate("SET GLOBAL old_passwords = @current_old_passwords");
+                }
             }
 
         }
