@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2002, 2017, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -4210,6 +4210,10 @@ public class ResultSetRegressionTest extends BaseTestCase {
     }
 
     public void testBug48820() throws Exception {
+        if (versionMeetsMinimum(8, 0, 5)) {
+            // old_passwords and PASSWORD() were removed since MySQL 8.0.5
+            return;
+        }
 
         CachedRowSet crs;
 
